Update and rename prp-hair-loss-treatment-therapy-restoration-nyc.html to prp-hair-loss-treatment-therapy-restoration-brooklyn.html

--- a/prp-hair-loss-treatment-therapy-restoration-brooklyn.html
+++ b/prp-hair-loss-treatment-therapy-restoration-brooklyn.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/prp-hair-loss-treatment-therapy-restoration-nyc.html" />
-<title>PRP Hair Loss, Treatment, Restoration, NYC | StudioMD</title>
-<meta name="Description" content="Looking for PRP hair loss treatment, therapy and restoration options?  Setup a free consultation for PRP hair loss NYC, restoration and full spectrum of options at StudioMD"/>
-<meta name="Keywords" content="PRP hair loss, regrowth restoration injection, treatment, Men and Women, New York City, Manhattan, NYC, NY, Soho"/>
+<link rel="canonical" href="https://www.thestudiomd.com/prp-hair-loss-treatment-therapy-restoration-brooklyn.html" />
+<title>PRP Hair Loss, Treatment, Restoration | StudioMD Brooklyn</title>
+<meta name="Description" content="Looking for fuller hair with no surgery and no downtime? PRP hair loss treatment, therapy & restoration options. Book a free consultation at StudioMD Brooklyn."/>
+<meta name="Keywords" content="PRP hair loss, regrowth restoration injection, treatment, Men and Women, Brooklyn"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles.css" rel="stylesheet" type="text/css" media="all" />
@@ -304,12 +304,9 @@ One of a handful of physicians in New York who has been awarded a <strong style=
 <div class="lbm-column width-10"> 
 </div>
 <div class="lbm-column width-80"> 
-<span style="font-family: philosopher; font-size: 2.7em !important; color: #6C053F;  padding: 0px 50px 0px 50px">Grow Thicker, Fuller Hair with the NEW Platelet-Rich Plasma Hair Restoration Treatment</span><br>
+<span style="font-family: philosopher; font-size: 2.7em !important; color: #6C053F;  padding: 0px 50px 0px 50px">PRP MEANS FULLER HAIR WITH NO SURGERY, NO DOWNTIME AND NO ADVERSE EFFECTS</span><br>
 <span style="font-family: philosopher; font-size: 1.8em !important; color: #F59A9C;  padding: 0px 50px 0px 50px">
-&#10003; Treats thinning hair and hair loss at the root<br>
-&#10003; Helps stimulate the activity of the hair follicles<br>
-&#10003; Boost new hair growth that is stronger and fuller<br>
-&#10003; Increases hair count and hair thickness<br>
+If you are having hair loss problems, learn more about the groundbreaking Platelet Rich Plasma Therapy and see if it's the right treatment for you.
 </span>
 </div>
 <div class="lbm-column width-10"> 
@@ -368,71 +365,68 @@ els[i].classList[fnName](className);
 <div class="lbm-column width-70">
 <h3 itemprop="name">Frequently Asked Questions</h3>
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS PRP FOR HAIR LOSS TREATMENT?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Platelet-rich plasma (PRP) therapy is a three-step medical treatment used to accelerate the body's healing process. Recent researches discovered that it also helps restore hair growth, so it became the latest treatment to grow fuller, thicker hair. PRP hair loss injections trigger natural hair growth and maintain it by increasing the blood supply to the hair follicle and increasing the thickness of the hair shaft. <br />* Results may vary</span>
+<div class="accordion"><span itemprop="name">WHAT IS PRP THERAPY FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP treatments use concentrated blood plasma to stimulate the growth of follicles, thereby reversing the hair miniaturization (thinning hair) seen in androgenic alopecia or common baldness.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DOES PLATELET-RICH PLASMA HAIR LOSS THERAPY WORK? </span>
+<div class="accordion"><span itemprop="name">HOW EFFECTIVE IS PRP THERAPY FOR HAIR LOSS?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP therapy for men and women is performed without contraindications. This non-surgical procedure utilizes the patient's blood, which is collected from the vein into a 20-22cc specialized tube, centrifuged, and then a concentrate of platelets and white blood cells, called Buffycoat, is aspirated, plus the lower third of the plasma. This denser area of platelets in the plasma is what’s called the Platelet-Rich Plasma (PRP). This area will typically have 3 -5 x concentration of platelets and is the key ingredient to success in any PRP procedure.<br><br>
-
-After this preparation, the PRP is injected directly into the patient's scalp, with special microneedles that reduce the discomfort of the application. These intradermal applications will release alpha granules, which stimulate the formation of new vessels by increasing blood flow in the hair bulb. It also releases growth hormones and stimulates fibroblasts that produce collagen. There is also a 200% increase in macrophages at the area, where they will destroy bacteria and fungi, controlling seborrheic dermatitis, one of the causes of hair loss that leads to baldness.
-*<br />* Results may vary</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Out of all of the products that you can find on the market today regarding hair growth, PRP is probably the most effective. But there is never any guarantee of success since results are going to vary greatly from patient to patient. What is safe to say is that PRP is an effective non-surgical procedure that works well to stimulate the follicle to induce hair growth.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name"><h7>HOW EFFECTIVE IS PRP HAIR TREATMENT? </h7></span>
+<div class="accordion"><span itemprop="name">HOW EFFECTIVE IS PRP HAIR TREATMENT?</span>
 </div>
 <div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP injections have shown a positive therapeutic effect on both male and female hair loss without major side effects. The number of sessions can vary according to the cause and the intensity, and depending on the case, a maintenance session with an average interval of 6 months may be necessary. In the vast majority of cases of baldness (Androgenic Alopecia), only its use is sufficient to achieve the desired results*. However, PRP is not a permanent fix; and maintenance treatments are required.<br />* Results may vary</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name"><h7>WHO IS A GOOD CANDIDATE FOR PRP HAIR LOSS PROCEDURE?</h7></span>
+<div class="accordion"><span itemprop="name">HOW MANY PRP TREATMENTS ARE NEEDED FOR HAIR LOSS?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP treatment is effective for both men and women and can be performed at any age. The great advantage of the therapy is the stimulation of stem cells, which are cells with multiple regenerative capacities and which stimulate the growth and thickening of the hair. PRP works best in patients with androgenic alopecia, female pattern baldness, female hair loss, and male hair loss. It is very important to be consistent with therapy to see results. Since the platelet-rich plasma comes from the patient's own blood, there is no risk of rejection or allergic reaction. Doctor consultation is necessary before any procedure to analyze each case and the results that can be expected.
-</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It depends on the area and the amount of thinning hair found. Your doctor will determine this at the time of the treatment. Despite the number of sessions, take comfort in knowing that injections are quickly done during a simple office visit and only take about 30-45 minutes.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name"><h7>WHAT IS THE PRP HAIR TREATMENT COST IN NYC? </h7>
-</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP Hair Reconstruction Therapy cost at our NYC locations near you depends on the patient's condition and the number of sessions required. Considered a top doctor in NYC, Dr. Vafa offers complimentary consultations. Best PRP Hair Treatment options are offered at two of our NYC locations:
-<br>
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="PRP hair NYC" />SoHo<br>
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="PRP hair midtown" />Midtown (57th)</span>
+<div class="accordion"><span itemprop="name">WHAT CAN YOU NOT DO AFTER PRP?</span>
+</div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">After a PRP procedure, we want inflammation to occur, so the expected healing process takes place in restoring your hair. Therefore avoid aspirin, Advil, Motrin, Ibuprofen, Naproxen, Voltaren, and any other anti-inflammatory medications for at least 3 days after your procedure or, if possible, up to 7 days.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name"><h8>DO PRP INJECTIONS HURT? </h8></span>
+<div class="accordion"><span itemprop="name">HOW SOON WILL I SEE RESULTS?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP injections do involve some amount of discomfort and a stinging feeling for about 5-10 minutes post-injection. The level of pain can also depend on how well you can tolerate the soreness. Our doctors take all the necessary steps to help you stay comfortable all through the session. <br />* Results may vary</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You can expect it to take 6-12 months to see visual improvement following PRP therapy for hair loss. However, you'll be able to see some changes sooner through hair mass index measurements (HMI).</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE IS THE BEST PRP HAIR TREATMENT NEAR ME?</span>
+<div class="accordion"><span itemprop="name">WHO IS A GOOD CANDIDATE FOR PRP HAIR TREATMENT?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">StudioMD locations in Soho and Midtown are providing PRP Hair near you within a few train rides. Our medical and beauty clinic is a reference in the city. Our physicians and medical staff provide the best beauty treatments since 2008, with over 100,000 Botox injections performed. Please check our location and directions to identify the most convenient PRP Hair location for you.
-</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Platelet-rich plasma is recommended especially if you cannot use other forms of treatment. It may be especially useful if you are not a candidate for a hair transplant, or cannot use finasteride. It is also useful in the treatment of crown thinning where a hair transplant may not be appropriate.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES PRP FOR HAIR LAST?</span>
+<div class="accordion"><span itemprop="name">DO PRP INJECTIONS HURT?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP is not a cure for conditions that cause hair loss. Multiple PRP hair loss treatments can be performed over time to maintain hair growth results. The doctor’s recommendations for how often a person should have PRP will vary depending on the patient's condition and the results of their initial treatment.<br>
-* Results may vary
-</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There can be some discomfort with both retrieving the blood to inject, and for the actual injection itself, since both parts of the procedure involve placing a needle through the skin. But some anesthetics can be provided to help alleviate some of the discomforts you may experience.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name"><h9>WHAT AREAS CAN BE TREATED WITH PRP (Platelet Rich Plasma)?</h9></span>
+<div class="accordion"><span itemprop="name">WHAT IS THE HAIR MASS INDEX (HMI)?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Areas that can be treated include but not limited to:<br /><br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle" alt="hair line PRP NYC" /> Hair Line<br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle"  alt="PRP for hair loss NYC" /> Hair Loss Areas<br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle"  alt="PRP hair loss NYC"  /> Facial Areas<br />
-<img src="images2020/bullet.png" width="9" height="9" hspace="3" style="vertical-align: middle"  alt="hair PRP restoration" /> Body Areas<br />
-</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Hair Mass Index, HMI, or HairScore is the unit of measurements that represent the cross-sectional site of a bundle of hair that grows from a 2cm x 2cm area of the scalp. It is a highly accurate and sensitive measurement of the amount and quality of hair growing from the scalp in any given area. Doctors currently use the Hair Mass Index to test the effectiveness of PRP treatments.</span>
+</div></div>
+  
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">HOW MUCH DOES PRP FOR HAIR LOSS COST?</span>
+</div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It varies per patient and per amount of sessions required. Call or email us for pricing.</span>
+</div></div>
+  
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A PRP FOR HAIR LOSS IN BROOKLYN?</span>
+</div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn the road to your hair goals is just as important to us as it is to you! If you would rather not have surgery or are not a good candidate for surgery, then PRP hair therapy can be the perfect solution for you. Book an appointment and let's work together towards your best self.</span>
 </div></div>
 
 </div>
