Update and rename prp-hair-loss-treatment-therapy-restoration-brooklyn.html to prp-hair-loss-treatment-therapy-restoration-long-island.html

--- a/prp-hair-loss-treatment-therapy-restoration-long-island.html
+++ b/prp-hair-loss-treatment-therapy-restoration-long-island.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/prp-hair-loss-treatment-therapy-restoration-brooklyn.html" />
-<title>PRP Hair Loss, Treatment, Restoration | StudioMD Brooklyn</title>
-<meta name="Description" content="Looking for fuller hair with no surgery and no downtime? PRP hair loss treatment, therapy & restoration options. Book a free consultation at StudioMD Brooklyn."/>
-<meta name="Keywords" content="PRP hair loss, regrowth restoration injection, treatment, Men and Women, Brooklyn"/>
+<link rel="canonical" href="https://www.thestudiomd.com/prp-hair-loss-treatment-therapy-restoration-long-island.html" />
+<title>PRP Hair Loss | Hair Restoration Long Island | StudioMD </title>
+<meta name="Description" content="Get fuller hair with no surgery and no downtime. PRP hair loss treatment, therapy & restoration in Long Island. Book a free consultation at StudioMD."/>
+<meta name="Keywords" content="PRP hair loss Long Island, regrowth restoration injection, treatment, Men and Women, Long Island"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles.css" rel="stylesheet" type="text/css" media="all" />
@@ -304,10 +304,8 @@ One of a handful of physicians in New York who has been awarded a <strong style=
 <div class="lbm-column width-10"> 
 </div>
 <div class="lbm-column width-80"> 
-<span style="font-family: philosopher; font-size: 2.7em !important; color: #6C053F;  padding: 0px 50px 0px 50px">PRP MEANS FULLER HAIR WITH NO SURGERY, NO DOWNTIME AND NO ADVERSE EFFECTS</span><br>
-<span style="font-family: philosopher; font-size: 1.8em !important; color: #F59A9C;  padding: 0px 50px 0px 50px">
-If you are having hair loss problems, learn more about the groundbreaking Platelet Rich Plasma Therapy and see if it's the right treatment for you.
-</span>
+<span style="font-family: philosopher; font-size: 2.7em !important; color: #6C053F;  padding: 0px 50px 0px 50px">PRP FOR FULLER HAIR WITH NO DOWNTIME</span><br>
+<span style="font-family: philosopher; font-size: 1.8em !important; color: #F59A9C;  padding: 0px 50px 0px 50px">PRP or platelet-rich plasma has been used for years in the treatment of a wide array of different conditions, but you'll be surprised to know that it’s also very effective for those suffering from hair loss. PRP is the perfect treatment for both men and women who have thin hair or are balding and want to improve hair growth.</span>
 </div>
 <div class="lbm-column width-10"> 
 </div></div></div>
@@ -365,70 +363,65 @@ els[i].classList[fnName](className);
 <div class="lbm-column width-70">
 <h3 itemprop="name">Frequently Asked Questions</h3>
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS PRP THERAPY FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP treatments use concentrated blood plasma to stimulate the growth of follicles, thereby reversing the hair miniaturization (thinning hair) seen in androgenic alopecia or common baldness.</span>
+<div class="accordion"><span itemprop="name">WHAT IS PRP FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP is used to halt or reverse miniaturization, also known as common baldness. The treatment uses concentrated blood plasma, which contains approximately three to five times the number of platelets found in normal circulating blood. It also carries other bioactive proteins that aid in wound healing and hair growth.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW EFFECTIVE IS PRP THERAPY FOR HAIR LOSS?</span>
+<div class="accordion"><span itemprop="name">HOW DOES PRP WORK?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Out of all of the products that you can find on the market today regarding hair growth, PRP is probably the most effective. But there is never any guarantee of success since results are going to vary greatly from patient to patient. What is safe to say is that PRP is an effective non-surgical procedure that works well to stimulate the follicle to induce hair growth.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Platelets are the part of your blood that contains growth factors and proteins and they are very important in the repair and regeneration of damaged tissue. PRP Therapy works by accelerating your body’s healing process. It creates "an injury" along with the injections and then addresses the site by encouraging the growth of new, healthy cells.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW EFFECTIVE IS PRP HAIR TREATMENT?</span>
+<div class="accordion"><span itemprop="name">HOW DO I PREPARE FOR PRP HAIR TREATMENT?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP injections have shown a positive therapeutic effect on both male and female hair loss without major side effects. The number of sessions can vary according to the cause and the intensity, and depending on the case, a maintenance session with an average interval of 6 months may be necessary. In the vast majority of cases of baldness (Androgenic Alopecia), only its use is sufficient to achieve the desired results*. However, PRP is not a permanent fix; and maintenance treatments are required.<br />* Results may vary</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">On the day of your PRP, it is important to increase your intake of fluids and drink at least an extra bottle of water right before the session. It is totally fine to keep other hair loss treatments such as minoxidil, laser, hormone-blocking tablets. But you should avoid alcohol for at least three days before your procedure. It is also important to discontinue any blood-thinning agents such as vitamin E, vitamin A, Ginko, Garlic, Flax, Cod Liver Oil, Essential Fatty Acids, at least one week before your treatment.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW MANY PRP TREATMENTS ARE NEEDED FOR HAIR LOSS?</span>
+<div class="accordion"><span itemprop="name">HOW IS THE RECOVERY AFTER PRP INJECTION?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It depends on the area and the amount of thinning hair found. Your doctor will determine this at the time of the treatment. Despite the number of sessions, take comfort in knowing that injections are quickly done during a simple office visit and only take about 30-45 minutes.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Even though there is no downtime, you should avoid any strenuous activities in the first 24 hours, since full recovery can take a few days. You can expect mild tension and pressure in the injection sites and experience a mild headache. It is okay to use Arnica. Your doctor will assess your level of discomfort and prescribe pain medication when necessary.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT CAN YOU NOT DO AFTER PRP?</span>
+<div class="accordion"><span itemprop="name">HOW LONG DOES PRP WORK FOR HAIR LOSS?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">After a PRP procedure, we want inflammation to occur, so the expected healing process takes place in restoring your hair. Therefore avoid aspirin, Advil, Motrin, Ibuprofen, Naproxen, Voltaren, and any other anti-inflammatory medications for at least 3 days after your procedure or, if possible, up to 7 days.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">If combined with a matrix-like ACell or BioD, you can expect to enjoy fuller and more abundant hair growth for up to 2 years. But keep in mind that annual maintenance treatments can be required to preserve effects.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW SOON WILL I SEE RESULTS?</span>
+<div class="accordion"><span itemprop="name">WHO SHOULD NOT GET PRP?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You can expect it to take 6-12 months to see visual improvement following PRP therapy for hair loss. However, you'll be able to see some changes sooner through hair mass index measurements (HMI).</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Patients who suffer from alopecia areata - a sudden hair loss that starts with one or more circular bald patches that may overlap - are typically good candidates for this procedure. Overall, individuals that have areas of weak hair follicles can experience positive outcomes with PRP for hair loss.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHO IS A GOOD CANDIDATE FOR PRP HAIR TREATMENT?</span>
+<div class="accordion"><span itemprop="name">WHY IS PRP SO PAINFUL?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Platelet-rich plasma is recommended especially if you cannot use other forms of treatment. It may be especially useful if you are not a candidate for a hair transplant, or cannot use finasteride. It is also useful in the treatment of crown thinning where a hair transplant may not be appropriate.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It is important to understand that PRP therapy takes time to work.  And, although the injections are not generally painful, the aching swelling that accompanies them is needed for the blood cells to start helping your healing process.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DO PRP INJECTIONS HURT?</span>
+<div class="accordion"><span itemprop="name">CAN I WASH MY HAIR AFTER PRP HAIR TREATMENT?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There can be some discomfort with both retrieving the blood to inject, and for the actual injection itself, since both parts of the procedure involve placing a needle through the skin. But some anesthetics can be provided to help alleviate some of the discomforts you may experience.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You should avoid washing the treatment area for 48 hours. After that, it is safe to use hair and skin care products and continue with topical medications. Nevertheless, avoid harsh chemicals in the first week of recovery.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS THE HAIR MASS INDEX (HMI)?</span>
+<div class="accordion"><span itemprop="name">DOES INSURANCE COVER PRP INJECTIONS?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Hair Mass Index, HMI, or HairScore is the unit of measurements that represent the cross-sectional site of a bundle of hair that grows from a 2cm x 2cm area of the scalp. It is a highly accurate and sensitive measurement of the amount and quality of hair growing from the scalp in any given area. Doctors currently use the Hair Mass Index to test the effectiveness of PRP treatments.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Most insurance plans do not cover PRP injections. You may try to appeal to the insurance provider but, since it is a fairly new treatment with not yet much scientific evidence published to support its use, the likelihood of PRP coverage is low.</span>
 </div></div>
   
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW MUCH DOES PRP FOR HAIR LOSS COST?</span>
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A PRP FOR HAIR LOSS IN LONG ISLAND?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It varies per patient and per amount of sessions required. Call or email us for pricing.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Long Island we understand how hair loss can cause frustration and self-consciousness in both men and women. If you are considering PRP for hair loss, please contact us today to schedule a comprehensive consultation with our highly skilled and talented team.
+</span>
 </div></div>
   
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A PRP FOR HAIR LOSS IN BROOKLYN?</span>
-</div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn the road to your hair goals is just as important to us as it is to you! If you would rather not have surgery or are not a good candidate for surgery, then PRP hair therapy can be the perfect solution for you. Book an appointment and let's work together towards your best self.</span>
-</div></div>
-
 </div>
 <div class="lbm-column width-15"><br />
 </div></div></div> 
