--- a/prp-hair-loss-treatment-therapy-restoration-white-plains.html
+++ b/prp-hair-loss-treatment-therapy-restoration-white-plains.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/prp-hair-loss-treatment-therapy-restoration-long-island.html" />
-<title>PRP Hair Loss | Hair Restoration Long Island | StudioMD </title>
-<meta name="Description" content="Get fuller hair with no surgery and no downtime. PRP hair loss treatment, therapy & restoration in Long Island. Book a free consultation at StudioMD."/>
-<meta name="Keywords" content="PRP hair loss Long Island, regrowth restoration injection, treatment, Men and Women, Long Island"/>
+<link rel="canonical" href="https://www.thestudiomd.com/prp-hair-loss-treatment-therapy-restoration-white-plains.html" />
+<title>PRP Hair Loss | Hair Restoration in Westchester | StudioMD White Plains </title>
+<meta name="Description" content="Fuller hair with no surgery and no downtime. PRP hair loss treatment, therapy & restoration options. Book a free consultation now at StudioMD White Plains. "/>
+<meta name="Keywords" content="PRP hair loss White Plains, regrowth restoration injection, treatment, Men and Women, Westchester, Stamford, Greenwich, Scarsdale"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles.css" rel="stylesheet" type="text/css" media="all" />
@@ -304,8 +304,8 @@ One of a handful of physicians in New York who has been awarded a <strong style=
 <div class="lbm-column width-10"> 
 </div>
 <div class="lbm-column width-80"> 
-<span style="font-family: philosopher; font-size: 2.7em !important; color: #6C053F;  padding: 0px 50px 0px 50px">PRP FOR FULLER HAIR WITH NO DOWNTIME</span><br>
-<span style="font-family: philosopher; font-size: 1.8em !important; color: #F59A9C;  padding: 0px 50px 0px 50px">PRP or platelet-rich plasma has been used for years in the treatment of a wide array of different conditions, but you'll be surprised to know that it’s also very effective for those suffering from hair loss. PRP is the perfect treatment for both men and women who have thin hair or are balding and want to improve hair growth.</span>
+<span style="font-family: philosopher; font-size: 2.7em !important; color: #6C053F;  padding: 0px 50px 0px 50px">EXPERIENCE THICKER, FULLER HAIR WITH PRP</span><br>
+<span style="font-family: philosopher; font-size: 1.8em !important; color: #F59A9C;  padding: 0px 50px 0px 50px">Both men and women who are suffering the effects of hair loss may benefit from undergoing PRP or platelet-rich plasma therapy. This non-surgical option shows tremendous promise for stimulating hair growth.</span>
 </div>
 <div class="lbm-column width-10"> 
 </div></div></div>
@@ -363,63 +363,62 @@ els[i].classList[fnName](className);
 <div class="lbm-column width-70">
 <h3 itemprop="name">Frequently Asked Questions</h3>
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT IS PRP FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">PRP is used to halt or reverse miniaturization, also known as common baldness. The treatment uses concentrated blood plasma, which contains approximately three to five times the number of platelets found in normal circulating blood. It also carries other bioactive proteins that aid in wound healing and hair growth.</span>
+<div class="accordion"><span itemprop="name">HOW DOES PRP WORK?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The procedure involves taking a small sample of your blood and then separating the platelet-rich plasma using a centrifuge. After assessing and checking the concentration of the sample - which is rich in growth factors and cytokines - it is injected into your scalp. With that, PRP can stimulate hair follicles and produce stronger, thicker, and longer hair growth.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DOES PRP WORK?</span>
+<div class="accordion"><span itemprop="name">WHAT IS THE SUCCESS RATE OF PRP?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Platelets are the part of your blood that contains growth factors and proteins and they are very important in the repair and regeneration of damaged tissue. PRP Therapy works by accelerating your body’s healing process. It creates "an injury" along with the injections and then addresses the site by encouraging the growth of new, healthy cells.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Since PRP is not to be seen as a standalone treatment method, when administered in conjunction with medicines and other topical treatments, it has shown to be successful among 70% of patients.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DO I PREPARE FOR PRP HAIR TREATMENT?</span>
+<div class="accordion"><span itemprop="name">WHAT TO AVOID AFTER PRP INJECTION?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">On the day of your PRP, it is important to increase your intake of fluids and drink at least an extra bottle of water right before the session. It is totally fine to keep other hair loss treatments such as minoxidil, laser, hormone-blocking tablets. But you should avoid alcohol for at least three days before your procedure. It is also important to discontinue any blood-thinning agents such as vitamin E, vitamin A, Ginko, Garlic, Flax, Cod Liver Oil, Essential Fatty Acids, at least one week before your treatment.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There are not many changes required after the procedure, but you should avoid drugs like aspirin, Advil, and alcohol. You can expect to experience some mild soreness and swelling, more rarely. You should wait a day to shampoo your hair and at least three days before coloring it.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW IS THE RECOVERY AFTER PRP INJECTION?</span>
+<div class="accordion"><span itemprop="name">HOW LONG SHOULD YOU REST AFTER PRP INJECTION?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Even though there is no downtime, you should avoid any strenuous activities in the first 24 hours, since full recovery can take a few days. You can expect mild tension and pressure in the injection sites and experience a mild headache. It is okay to use Arnica. Your doctor will assess your level of discomfort and prescribe pain medication when necessary.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">One of the best things about PRP for hair loss is that there is zero downtime and minimal side effects, other than temporary and mild inflammation. Most patients can resume all activities almost immediately after the procedure. Nevertheless, you should always check particularities with your doctor and follow instructions that may concern your unique case.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES PRP WORK FOR HAIR LOSS?</span>
+<div class="accordion"><span itemprop="name">HOW MANY SESSIONS WILL I NEED?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">If combined with a matrix-like ACell or BioD, you can expect to enjoy fuller and more abundant hair growth for up to 2 years. But keep in mind that annual maintenance treatments can be required to preserve effects.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although it can vary per patient, experience has shown that the best results are seen with monthly treatments for 3 months, followed by a repeat treatment 4-6 months later. After this first round of treatments, yearly maintenance treatments are recommended to maintain results.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHO SHOULD NOT GET PRP?</span>
+<div class="accordion"><span itemprop="name">AM I A GOOD CANDIDATE FOR PRP HAIR LOSS TREATMENT?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Patients who suffer from alopecia areata - a sudden hair loss that starts with one or more circular bald patches that may overlap - are typically good candidates for this procedure. Overall, individuals that have areas of weak hair follicles can experience positive outcomes with PRP for hair loss.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It is important to note that there is an individualized response to this treatment with a spectrum of effectiveness. It does not work in all cases. Your doctor will assess your very own condition and discuss with you the benefits of the therapy. As a rule, you can expect better results where there is still thinning hair.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHY IS PRP SO PAINFUL?</span>
+<div class="accordion"><span itemprop="name">IS PRP FOR HAIR LOSS PAINFUL?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It is important to understand that PRP therapy takes time to work.  And, although the injections are not generally painful, the aching swelling that accompanies them is needed for the blood cells to start helping your healing process.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">The procedure is usually very well tolerated by patients. But any discomfort can be minimized with the use of a cooling air device (Zimmer cooler) before and during each injection. Post-procedure you can expect mild soreness for up to 72 hours.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">CAN I WASH MY HAIR AFTER PRP HAIR TREATMENT?</span>
+<div class="accordion"><span itemprop="name">CAN I COMB MY HAIR AFTER PRP?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You should avoid washing the treatment area for 48 hours. After that, it is safe to use hair and skin care products and continue with topical medications. Nevertheless, avoid harsh chemicals in the first week of recovery.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">You can safely shampoo and comb your hair the next day or 12 hours after the procedure. Keep in mind that swelling is a positive effect of the procedure and is likely to last for 2 to 3 days. During this time you should avoid energetic rubbing or pressing the scalp.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES INSURANCE COVER PRP INJECTIONS?</span>
+<div class="accordion"><span itemprop="name">HOW MUCH DO PRP SCALP INJECTIONS COST?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Most insurance plans do not cover PRP injections. You may try to appeal to the insurance provider but, since it is a fairly new treatment with not yet much scientific evidence published to support its use, the likelihood of PRP coverage is low.</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Prices may vary considering your specific treatment plan, depending upon the number of sessions that the patient elects to undergo. Call or email us for an exact quote.</span>
 </div></div>
   
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A PRP FOR HAIR LOSS IN LONG ISLAND?</span>
+<div class="accordion"><span itemprop="name">WHERE IS THE BEST PLACE TO GET A PRP FOR HAIR LOSS WHITE PLAINS / GREENWICH / WESTCHESTER?</span>
 </div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Long Island we understand how hair loss can cause frustration and self-consciousness in both men and women. If you are considering PRP for hair loss, please contact us today to schedule a comprehensive consultation with our highly skilled and talented team.
-</span>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">StudioMD White Plains offers state-of-the-art surgical hair restoration and advanced medical hair loss treatments to patients. Book a consultation and we'll be happy to assess your unique case and set a customized plan to get you closer to your aesthetic goals.</span>
 </div></div>
   
 </div>
